# maui-station

./: .gitignore  .travis.yml_disabled  CMakeLists.txt  Messages.sh  org.kde.station.appdata.xml  org.kde.station.desktop  station.kdev4
.kdev4/: station.kdev4
debian/: changelog  control  copyright
po/ar/: station.po
po/ca/: station.po
po/ca@valencia/: station.po
po/cs/: station.po
po/de/: station.po
po/en_GB/: station.po
po/eo/: station.po
po/es/: station.po
po/eu/: station.po
po/fi/: station.po
po/fr/: station.po
po/ga/: station.po
po/gl/: station.po
po/he/: station.po
po/it/: station.po
po/ja/: station.po
po/ka/: station.po
po/ko/: station.po
po/lt/: station.po
po/lv/: station.po
po/nl/: station.po
po/pl/: station.po
po/pt/: station.po
po/pt_BR/: station.po
po/sa/: station.po
po/sk/: station.po
po/sl/: station.po
po/sv/: station.po
po/tr/: station.po
po/ug/: station.po
po/uk/: station.po
po/zh_CN/: station.po
po/zh_TW/: station.po
src/: CMakeLists.txt  SettingsDialog.qml  Terminal.qml  TerminalLayout.qml  main.cpp  main.qml  org.kde.station.desktop  qml.qrc
src/assets/: assets.qrc  img_assets.qrc
src/helpers/: commandsmodel.cpp  commandsmodel.h  fonts.cpp  fonts.h  keyshelper.cpp  keyshelper.h  station.cpp  station.h
src/server/: server.cpp  server.h
src/widgets/: CommandShortcuts.qml  SettingsDialog.qml  Terminal.qml  TerminalLayout.qml  TutorialDialog.qml
